--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "babel-loader": "^9.1.3",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "peerDependencies": {
+    "react":"*"
   }
 }
